contrast and RWD fixes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -129,11 +129,11 @@ button {
 
 .heroRight {
   position: absolute;
-  left: 20%;
+  left: 25%;
 }
 
 .heroRight img {
-  width: 40rem;
+  width: 35rem;
   height: auto;
 }
 
@@ -165,6 +165,7 @@ button {
   background-color: #FF3B30;
   padding: 1rem 3rem;
   border: solid 0.1rem black;
+  object-fit: contain;
 }
 
 .detailsRight ul li {
@@ -184,23 +185,13 @@ button {
     width: 8rem;
     padding: 1rem 2rem;
   }
-}
-
-@media (max-width: 820px) {
-  body {
-  padding: 8% 12%;
-  }
-
-  .heroLeft {
-    margin-left: 2rem;
-  }
 
   .heroRight {
-    left: 15%;
+    left: 35%;
   }
   
   .heroRight img {
-    width: 34rem;
+    width: 30rem;
   }
 
   .details {
@@ -226,16 +217,58 @@ button {
     width: 12rem;
     height: 8rem;
     padding: 1rem 3rem;
+    margin: 0 4rem;
+  }
+}
+
+@media (max-width: 820px) {
+  body {
+  padding: 8% 12%;
+  }
+
+  .heroLeft {
+    margin-left: 2rem;
+  }
+
+  .heroRight {
+    left: 33%;
+  }
+  
+  .heroRight img {
+    width: 25rem;
+  }
+
+  .upgrade img {
+    margin: 0 2rem;
+  }
+
+  .detailsLeft {
+    margin-bottom: 3rem;
   }
 }
 
 @media (max-width: 768px) {
   .heroRight {
-    left: 25%;
+    left: 35%;
   }
   
   .heroRight img {
-    width: 28rem;
+    width: 23rem;
+  }
+}
+
+@media (max-width: 625px) {
+  body {
+    padding: 10% 12%;
+  }
+  
+  .heroRight {
+    left: 42%;
+    top: 34%;
+  }
+  
+  .heroRight img {
+    width: 18rem;
   }
 }
 
@@ -272,40 +305,48 @@ button {
   }
 
   .heroRight {
-    left: 26%;
+    left: 44%;
+    top: 10%;
   }
   
   .heroRight img {
-    width: 65rem;
+    width: 45rem;
   }
 
   .heroLeft {
     margin-left: 4rem;
   }
 
-  .upgrade {
-    margin: 1rem 4rem;
-  }
-
-  .upgrade img {
-    width: 20rem;
-    height: 14rem;
-    padding: 1rem 4rem;
+  .detailsLeft {
+    width: 100%;
   }
 
   .detailsLeft, 
   .detailsRight {
     margin: 4rem 0;
   }
+
+  .upgrades {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .upgrade img {
+    width: 30rem;
+    height: 20rem;
+    margin: 4rem 4rem;
+  }
 }
 
 @media (max-width: 375px) {
   .heroRight {
-    left: 26%;
+    left: 45%;
+    top: 45%;
   }
   
   .heroRight img {
-    width: 60rem;
+    width: 40rem;
   }
 
   #tools a {
